<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_app.main.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_bg_language" />

    <!--    layoutActionBar-->
    <FrameLayout
        android:id="@+id/layoutActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/actionBar"
            layout="@layout/layout_actionbar" />
    </FrameLayout>

    <ImageView
        android:id="@+id/titleHome"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/img_home_title"
        app:layout_constraintDimensionRatio="360:120"
        app:layout_constraintTop_toBottomOf="@id/layoutActionBar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/nativeClHome"
        app:layout_constraintTop_toBottomOf="@id/titleHome">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <!--            btnCreate-->
            <FrameLayout
                android:id="@+id/btnCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/img_home_1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <com.piratemaker.postermaker.poster.core.custom.text.DoubleStrokeTextView
                        android:id="@+id/tv1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/kurale_regular"
                        android:gravity="center"
                        android:text="@string/posterwantedmaker"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        app:outerStrokeColor="#000000"
                        app:outerStrokeWidth="1dp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>
            </FrameLayout>

            <!--            btnMyCreation-->
            <FrameLayout
                android:id="@+id/BtnPosterWantedTemplate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/img_home_2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <com.piratemaker.postermaker.poster.core.custom.text.DoubleStrokeTextView
                        android:id="@+id/tv2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:fontFamily="@font/kurale_regular"
                        android:gravity="center"
                        android:text="@string/posterwantedtemplates"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        app:outerStrokeColor="#000000"
                        app:outerStrokeWidth="1dp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>
            </FrameLayout>

            <!--            btnRandom-->
            <FrameLayout
                android:id="@+id/btnMydesgin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/img_home_3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <com.piratemaker.postermaker.poster.core.custom.text.DoubleStrokeTextView
                        android:id="@+id/tv3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:fontFamily="@font/kurale_regular"
                        android:gravity="center"
                        android:text="@string/my_design"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        app:outerStrokeColor="#000000"
                        app:outerStrokeWidth="1dp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <!--quyen-->
    <!-- nativeClHome -->
    <FrameLayout
        android:id="@+id/nativeClHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/ads_shimmer_collap_native" />
    </FrameLayout>

    <!--quyen-->
</androidx.constraintlayout.widget.ConstraintLayout>